HiPUTS#26 Decision Stage Task + refactor R/RW interfaces
* Add implicit calculation of car decision
* Refactor .*ReadOnly interfaces to .*Read and make .*ReadWrite inherit from .*Read
* Compilation fix
* Unit tests
* Implement LaneDecisionStageTask
* Fix addToIncomingCars method in lane + test
* Add missing ReadOnly and ReadWrite interfaces
* remove update of acceleration from decide method in car
* Wrap IDecider decision result with class + small refactor